fix language nav on mobile => do not accept a tag as toggle replaced into button

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -23,14 +23,14 @@
 
 .site-header {
 	z-index:101;
-	background: rgba(0,0,0,0.25);
+	background: rgba(0,0,0,0.5);
 }
 
 .site-menu {
 	z-index:100;
 	font-family: Source Sans Pro;
 	padding-top:10px;
-	background: rgba(0,0,0,0.25);
+	background: rgba(0,0,0,0.5);
 	border:none;
 }
 
@@ -55,6 +55,16 @@
   -o-transition:      all 1000ms ease;
 	-ms-transition:     all 1000ms ease;
   transition:         all 1000ms ease;
+}
+
+@media (max-width: 767px) {
+  .site-menu .navbar-collapse {
+    background-color: rgba(33, 33, 33, 1);
+  }
+
+  .site-menu .navbar-nav .open .dropdown-menu {
+    background-color: rgba(245, 245, 245, 1);
+  }
 }
 
 //.dropdown:hover .dropdown-menu {
